--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://www.youtube.com/channel/UCORDpONBjQlp1iaylG8L9uw"><i class="icon-social-youtube"/a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.youtube.com/channel/UCORDpONBjQlp1iaylG8L9uw"><bi bi-youtube/a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/PolyplusStudios"><i class="icon-social-twitter"></i></a>
