--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="col-lg-10">
                         <!-- <h2>Somos una empresa dedicada al desarrollo de videojuegos. </h2> -->
                         <p class="lead mb-5">
-                            Somos una empresa dedicada al desarrollo de videojuegos que intenta crear nuevos mundos mediante código. 
+                            Somos un estudio dedicado al desarrollo de videojuegos que intenta crear nuevos mundos mediante código. 
                             <!-- <a href="https://unsplash.com/">Unsplash</a> -->
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">Qué ofrecemos</a>
@@ -86,17 +86,6 @@
                         <p class="text-faded mb-0">I mustache you a question...</p>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- Callout-->
-        <section class="callout">
-            <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mx-auto mb-5">
-                    Welcome to
-                    <em>your</em>
-                    next website!
-                </h2>
-                <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download Now!</a>
             </div>
         </section>
         <!-- Portfolio-->
@@ -167,7 +156,7 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://www.youtube.com/channel/UCORDpONBjQlp1iaylG8L9uw"><bi bi-youtube/a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.youtube.com/channel/UCORDpONBjQlp1iaylG8L9uw"><i class="icon-social-youtube"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/PolyplusStudios"><i class="icon-social-twitter"></i></a>
