--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <!-- <h2>Somos una empresa dedicada al desarrollo de videojuegos. </h2> -->
+                        <h2>¿Quiénes somos? </h2> 
                         <p class="lead mb-5">
                             Somos un estudio dedicado al desarrollo de videojuegos que intenta crear nuevos mundos mediante código. 
                             <!-- <a href="https://unsplash.com/">Unsplash</a> -->
@@ -61,6 +61,14 @@
                     <h2 class="mb-5">What We Offer</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
+                    <img class="img-fluid" width="30" heigth="30" src="assets/img/fotoJuego.jpg"/>
+                    
+                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" width="30" heigth="30" src="assets/img/AlvaroG.png"/></span>
+                        <h4><strong>Responsive</strong></h4>
+                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                    </div>
+                    
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
                         <h4><strong>Responsive</strong></h4>
@@ -93,15 +101,15 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Recent Projects</h2>
+                    <h2 class="mb-5">Proyectos recientes</h2>
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://polyplus.itch.io/">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Fishing Legends</div>
-                                    <p class="mb-0">Un juego de pesca lleno de aventuras y diversión</p>
+                                    <p class="mb-0">Un juego de pesca arcade lleno de aventuras y diversión</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/fotoJuego.jpg" alt="..." />
