--- a/index.html
+++ b/index.html
@@ -57,41 +57,28 @@
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0">Services</h3>
-                    <h2 class="mb-5">What We Offer</h2>
+                    <h2 class="mb-5">Integrantes</h2>
                 </div>
-                <div class="row gx-4 gx-lg-5">
-                    <img class="img-fluid" width="30" heigth="30" src="assets/img/fotoJuego.jpg"/>
-                    
+                <div class="row gx-4 gx-lg-5">                    
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" width="30" heigth="30" src="assets/img/AlvaroG.png"/></span>
-                        <h4><strong>Responsive</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
-                    </div>
-                    
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/AlvaroG.png"/></span>
+                        <h4><strong>Álvaro González</strong></h4>
+                    </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
-                        <h4><strong>Responsive</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
-                    </div>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/AlvaroR.png"/></span>
+                        <h4><strong>Álvaro Ramírez</strong></h4>
+                    </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                        <h4><strong>Redesigned</strong></h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                        <h4><strong>Favorited</strong></h4>
-                        <p class="text-faded mb-0">
-                            Millions of users
-                            <i class="fas fa-heart"></i>
-                            Start Bootstrap!
-                        </p>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
-                        <h4><strong>Question</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/Ana.png"/></span>
+                        <h4><strong>Ana Márquez</strong></h4>
+                    </div>                   
+                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/Marta.png"/></span>
+                        <h4><strong>Marta Garcia</strong></h4>
+                    </div>                   
+                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/Oihane.png"/></span>
+                        <h4><strong>Oihane Roca</strong></h4>
                     </div>
                 </div>
             </div>
