--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">                    
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/AlvaroG.png"/></span>
+                        <img class="img-fluid" src="assets/img/AlvaroG.png"/>
                         <h4><strong>Álvaro González</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
