--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
                         <h4><strong>Álvaro González</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/AlvaroR.png"/></span>
+                        <img class="img-fluid" src="assets/img/AlvaroR.png"/>
                         <h4><strong>Álvaro Ramírez</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/Ana.png"/></span>
+                        <img class="img-fluid" src="assets/img/Ana.png"/>
                         <h4><strong>Ana Márquez</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/Marta.png"/></span>
+                        <img class="img-fluid" src="assets/img/Marta.png"/>
                         <h4><strong>Marta Garcia</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img class="img-fluid" src="assets/img/Oihane.png"/></span>
+                        <img class="img-fluid" src="assets/img/Oihane.png"/>
                         <h4><strong>Oihane Roca</strong></h4>
                     </div>
                 </div>
