--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-                <li class="sidebar-nav-item"><a href="#about">About</a></li>
-                <li class="sidebar-nav-item"><a href="#services">Services</a></li>
+                <li class="sidebar-brand"><a href="#page-top">PolyPlus Studios</a></li>
+                <li class="sidebar-nav-item"><a href="#page-top">Página principal</a></li>
+                <li class="sidebar-nav-item"><a href="#about">¿Quiénes somos?</a></li>
+                <li class="sidebar-nav-item"><a href="#services">Integrantes</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-                <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+                <li class="sidebar-nav-item"><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
         <!-- Header-->
@@ -65,7 +65,7 @@
                         <h4><strong>Álvaro González</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <img class="img-fluid" src="assets/img/AlvaroR.png"/>
+                        <img class='imgRedonda' src="assets/img/AlvaroR.png"/>
                         <h4><strong>Álvaro Ramírez</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
