--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">                    
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <img class='imgRedonda' src="assets/img/AlvaroG.png"/>
+                        <img class="imgRedonda" src="assets/img/AlvaroG.png"/>
                         <h4><strong>Álvaro González</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <img class='imgRedonda' src="assets/img/AlvaroR.png"/>
+                        <img class="imgRedonda" src="assets/img/AlvaroR.png"/>
                         <h4><strong>Álvaro Ramírez</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
