--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
                         <h4><strong>Álvaro Ramírez</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <img class="img-fluid" src="assets/img/Ana.png"/>
+                        <img class="imgRedonda" src="assets/img/Ana.png"/>
                         <h4><strong>Ana Márquez</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <img class="img-fluid" src="assets/img/Marta.png"/>
+                        <img class="imgRedonda" src="assets/img/Marta.png"/>
                         <h4><strong>Marta Garcia</strong></h4>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <img class="img-fluid" src="assets/img/Oihane.png"/>
+                        <img class="imgRedonda" src="assets/img/Oihane.png"/>
                         <h4><strong>Oihane Roca</strong></h4>
                     </div>
                 </div>
