--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">PolyPlus Studios</h1>
                 <h3 class="mb-5"><em>Experiencias la MAR de divertidas</em></h3>
-                <a class="btn btn-primary btn-xl" href="#about">Integrantes</a>
+                <a class="btn btn-primary btn-xl" href="#about">Descubre más</a>
             </div>
         </header>
         <!-- About-->
@@ -48,7 +48,7 @@
                             Somos un estudio dedicado al desarrollo de videojuegos que intenta crear nuevos mundos mediante código. 
                             <!-- <a href="https://unsplash.com/">Unsplash</a> -->
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">Qué ofrecemos</a>
+                        <a class="btn btn-dark btn-xl" href="#services">Integrantes</a>
                     </div>
                 </div>
             </div>
