--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <p class="mb-0">Un juego de pesca arcade lleno de aventuras y diversión</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/fotoJuego.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/FishingLegendOscuro.png" alt="..." />
                         </a>
                     </div>
                 </div>
