--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="sidebar-brand"><a href="#page-top">PolyPlus Studios</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Página principal</a></li>
                 <li class="sidebar-nav-item"><a href="#about">¿Quiénes somos?</a></li>
-                <li class="sidebar-nav-item"><a href="#services">Integrantes</a></li>
+                <li class="sidebar-nav-item"><a href="#services">Equipo</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contacto</a></li>
             </ul>
@@ -45,10 +45,10 @@
                     <div class="col-lg-10">
                         <h2>¿Quiénes somos? </h2> 
                         <p class="lead mb-5">
-                            Somos un estudio dedicado al desarrollo de videojuegos que intenta crear nuevos mundos mediante código. 
+                            Somos un estudio indie dedicado al desarrollo de videojuegos que intenta crear nuevos mundos mediante código. 
                             <!-- <a href="https://unsplash.com/">Unsplash</a> -->
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">Integrantes</a>
+                        <a class="btn btn-dark btn-xl" href="#services">Equipo</a>
                     </div>
                 </div>
             </div>
@@ -57,28 +57,33 @@
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
-                    <h2 class="mb-5">Integrantes</h2>
+                    <h2 class="mb-5">Equipo</h2>
                 </div>
                 <div class="row gx-5 gx-lg-5">                    
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/AlvaroG.png"/>
                         <h4><strong>Álvaro González</strong></h4>
+                        <h5>Progamador principal</h5>
                     </div>                                     
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/Ana.png"/>
                         <h4><strong>Ana Márquez</strong></h4>
+                        <h5>Modeladora 3D y programadora</h5>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/Marta.png"/>
                         <h4><strong>Marta Garcia</strong></h4>
+                        <h5>Artista 2D y programadora</h5>
                     </div>     
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/AlvaroR.png"/>
                         <h4><strong>Álvaro Ramírez</strong></h4>
+                        <h5>Diseñador de Juego y programador</h5>
                     </div> 
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/Oihane.png"/>
                         <h4><strong>Oihane Roca</strong></h4>
+                        <h5>Modeladora 3D y programadora</h5>
                     </div>
                 </div>
             </div>
