--- a/index.html
+++ b/index.html
@@ -63,27 +63,27 @@
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/AlvaroG.png"/>
                         <h4><strong>Álvaro González</strong></h4>
-                        <h5>Progamador principal</h5>
+                        <p>Progamador principal</p>
                     </div>                                     
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/Ana.png"/>
                         <h4><strong>Ana Márquez</strong></h4>
-                        <h5>Modeladora 3D y programadora</h5>
+                        <p>Modeladora 3D y programadora</p>
                     </div>                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/Marta.png"/>
                         <h4><strong>Marta Garcia</strong></h4>
-                        <h5>Artista 2D y programadora</h5>
+                        <p>Artista 2D y programadora</p>
                     </div>     
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/AlvaroR.png"/>
                         <h4><strong>Álvaro Ramírez</strong></h4>
-                        <h5>Diseñador de Juego y programador</h5>
+                        <p>Diseñador de Juego y programador</p>
                     </div> 
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/Oihane.png"/>
                         <h4><strong>Oihane Roca</strong></h4>
-                        <h5>Modeladora 3D y programadora</h5>
+                        <p>Modeladora 3D y programadora</p>
                     </div>
                 </div>
             </div>
