--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                         <img class="imgRedonda" src="assets/img/Marta.png"/>
                         <h4><strong>Marta Garcia</strong></h4>
                         <p>Artista 2D y programadora</p>
-                    </div>     
+                    </div>    
+                </div>
+                <div class="row gx-5 gx-lg-5">  
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <img class="imgRedonda" src="assets/img/AlvaroR.png"/>
                         <h4><strong>Álvaro Ramírez</strong></h4>
@@ -84,7 +86,7 @@
                         <img class="imgRedonda" src="assets/img/Oihane.png"/>
                         <h4><strong>Oihane Roca</strong></h4>
                         <p>Modeladora 3D y programadora</p>
-                    </div>
+                    </div>  
                 </div>
             </div>
         </section>
