--- a/index.html
+++ b/index.html
@@ -59,30 +59,30 @@
                 <div class="content-section-heading">
                     <h2 class="mb-5">Equipo</h2>
                 </div>
-                <div class="row gx-5 gx-lg-5">                    
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                <div class="row gx-0">                    
+                    <div class="col-lg-4">
                         <img class="imgRedonda" src="assets/img/AlvaroG.png"/>
                         <h4><strong>Álvaro González</strong></h4>
                         <p>Progamador principal</p>
                     </div>                                     
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <div class="col-lg-4">
                         <img class="imgRedonda" src="assets/img/Ana.png"/>
                         <h4><strong>Ana Márquez</strong></h4>
                         <p>Modeladora 3D y programadora</p>
                     </div>                   
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <div class="col-lg-4">
                         <img class="imgRedonda" src="assets/img/Marta.png"/>
                         <h4><strong>Marta Garcia</strong></h4>
                         <p>Artista 2D y programadora</p>
                     </div>    
                 </div>
-                <div class="row gx-5 gx-lg-5">  
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                <div class="row gx-0">  
+                    <div class="col-lg-6">
                         <img class="imgRedonda" src="assets/img/AlvaroR.png"/>
                         <h4><strong>Álvaro Ramírez</strong></h4>
                         <p>Diseñador de Juego y programador</p>
                     </div> 
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <div class="col-lg-6">
                         <img class="imgRedonda" src="assets/img/Oihane.png"/>
                         <h4><strong>Oihane Roca</strong></h4>
                         <p>Modeladora 3D y programadora</p>
