--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="https://polyplus.itch.io/">
+                        <a class="portfolio-item" href="https://polyplus.itch.io/fishing">
                             <div class="caption">
                                 <div class="caption-content">
                                     <p>  </p>
